# Fullerene

./: Cargo.toml  README.md
src/: c60.rs  dodecahedron.rs  icosahedron.rs  lib.rs
