[package]
name = "Fullerene"
version = "0.2.3" # change with html_root_url in lib.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "Fullerene on the ODE (Open Dynamics Engine) for Rust"
keywords = ["kinetics", "dynamics", "3d", "physics", "polyhedron"]
categories = ["simulation", "rendering", "science", "mathematics"]
license = "MIT"

documentation = "https://docs.rs/Fullerene/"
homepage = "https://crates.io/crates/Fullerene"
repository = "https://github.com/nomissbowling/Fullerene"

readme = "README.md"

#build = "build.rs"

[lib]
name = "fullerene"

[dependencies]
num = { version = "0.4" } # "0.4.1"

polyhedron-faces = { version = "0.2" }
